# alpacalyzer-algo-trader

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CODE_REVIEW_21.md  CODE_REVIEW_26.md  Dockerfile  HARDENING_ANALYSIS.md  HARDENING_PLAN.md  LICENSE  MIGRATION_PANDAS_TA.md  NEXT_ITERATION_OVERVIEW.md  README.md  SUPERPOWERS_INTEGRATION.md  logger_info_usage.txt  migration_roadmap.md  pyproject.toml
.agents/: config.yaml  scratchpad.md
.agents/agents/code-reviewer/: opencode.md  prompt.md
.agents/commands/: create-pr.md  fix-issue.md  plan-feature.md  start-issue.md
.agents/hooks/: check-completion.sh  check-plan-exists.sh  opencode-grind-loop.sh
.agents/skills/execution/: SKILL.md
.agents/skills/gpt-integration/: SKILL.md
.agents/skills/issue-decomposition/: SKILL.md
.agents/skills/new-agent/: SKILL.md
.agents/skills/new-scanner/: SKILL.md
.agents/skills/new-strategy/: SKILL.md
.agents/skills/observability/: SKILL.md
.agents/skills/pydantic-model/: SKILL.md
.agents/skills/technical-indicator/: SKILL.md
.agents/skills/validate-e2e/: SKILL.md
.claude/: settings.local.json
.claude/agents/: code-reviewer.md
.claude/commands/: fix-issue.md  plan-feature.md
.claude/skills/: execution  gpt-integration  new-agent  new-scanner  new-strategy  pydantic-model  technical-indicator
.claude/skills/addressing-code-review/: SKILL.md
.claude/skills/execution/: SKILL.md
.claude/skills/new-agent/: SKILL.md
.claude/skills/pr-code-review/: SKILL.md
.claude/skills/pydantic-model/: SKILL.md
.config/: wt.toml
.github/ISSUE_TEMPLATE/: feature-task.md
.github/instructions/: code-review.instructions.md
.github/prompts/: code-review.prompt.md
.github/workflows/: ci.yml  doc-gardening.yml  pr.yml
.opencode/agent/: code-reviewer.md
.opencode/plugins/: grind-loop.ts  plan-first.ts
docs/: 01_cli___scheduling_.md  02_trading_orchestrator__trader__.md  03_hedge_fund_workflow_graph_.md  04_investment_agents_.md  05_risk___portfolio_management_agents_.md  06_trading_strategist_agent_.md  07_data_layer___models_.md  08_technical_analysis_engine_.md  09_data_scanners_.md  10_gpt_integration_.md  11_utility_modules_.md  INDEX.md  index.md  principles.md
docs/architecture/: overview.md
docs/architecture/decisions/: adr-001-strategy-abstraction.md  adr-002-execution-engine.md
docs/dev/: commit-conventions.md  common-mistakes.md  debugging-guide.md  debugging.md  github-operations.md  parallel-exploration.md  tdd-flow.md  testing.md
docs/plans/: INDEX.md  harness-engineering-upgrade.md  issue-150-155-wave3.md  issue-162.md  issue-166.md  issue-167.md  issue-168.md  journal-auto-sync.md  llm-migration-and-trading-improvements.md  plan-grind-loop-hardening.md  plan-parallel-orchestrator.md  plan-robust-llm-structured-output.md  tech-debt.md
docs/templates/: plan-template.md
scripts/: agent-metrics-summary.py  agent_metrics_summary.py  analyze_confidence.py  audit_principles.py  issue-preflight.sh  lint_architecture.py  orchestrate.sh  setup-agent-links.sh  validate_docs.py  wti.sh  wtr.sh
src/alpacalyzer/: __init__.py  __main__.py  base.py  cli.py  hedge_fund.py  orchestrator.py
src/alpacalyzer/agents/: agents.py  ben_graham_agent.py  bill_ackman_agent.py  cathie_wood_agent.py  charlie_munger.py  fundamentals_agent.py  momentum_agent.py  quant_agent.py  sentiment_agent.py  technicals_agent.py  warren_buffet_agent.py  (+1 more)
tests/: conftest.py  test_agent_metrics_summary.py  test_audit_principles.py  test_base_strategy.py  test_candles_formatter.py  test_check_completion.py  test_cli_dry_run.py  test_cli_integration.py  test_cli_orchestrator.py  test_cooldown.py  test_data_api.py  test_display.py  test_eod_performance.py  test_execution_engine.py  test_investor_agents.py  test_lint_architecture.py  test_llm_feature_flag.py  test_llm_structured.py  test_logger.py  test_orchestrator.py  test_order_manager.py  test_pipeline_e2e.py  test_position_manager.py  test_position_tracker.py  test_prompts.py  test_risk_manager.py  test_risk_metrics.py  test_scanner_protocol.py  test_sentiment_agent.py  test_strategy_config.py  test_strategy_protocol.py  test_technical_analysis.py  test_technicals_agent.py  test_trader.py  test_trader_liquidation.py  test_validate_docs.py
tests/analysis/: test_dashboard.py
tests/events/: __init__.py  test_emitter.py  test_llm_call_event.py
tests/execution/: __init__.py  fixtures.py  mock_broker.py  test_bracket_exit_logging.py  test_bracket_order_sync.py  test_e2e_cycles.py  test_error_handling.py  test_order_flow.py  test_position_management.py  test_signal_cache.py  test_signal_processing.py
tests/llm/: test_llm_observability.py
tests/strategies/: __init__.py  test_base.py  test_breakout.py  test_mean_reversion.py  test_momentum.py  test_registry.py  test_strategy_dataclasses.py  test_strategy_protocol.py  test_strategy_state_persistence.py
tests/sync/: test_client.py  test_handler.py  test_models.py
tests/test_backtesting/: test_backtester.py
tests/test_execution/: test_position_tracker.py  test_signal_queue.py  test_state_persistence.py  test_state_persistence_integration.py
tests/test_gpt/: test_config.py
tests/test_llm/: test_client.py
tests/test_pipeline/: test_aggregator.py  test_registry.py  test_scheduler.py
tests/test_scanners/: test_adapters.py  test_finviz_scanner.py
(+83 files in other folders)
